# UltraCore

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AI_CACHING_AUDIT_IMPLEMENTATION.md  ARCHITECTURE_AUDIT.md  AUDIT_DELIVERY_REPORT.md  CLIENT_MANAGEMENT_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_IMPORT_EXPORT_SYSTEM.md  DOCUMENT_MANAGEMENT_SUMMARY.md  Dockerfile.additional  Dockerfile.investor  Dockerfile.lending  Dockerfile.test  Dockerfile.ultrawealth  ENHANCED_TEST_SUITE_DELIVERY.md  ETF_DATA_MANUS_API.md  EVENT_SOURCING_SYSTEM.md  FINAL_TEST_REPORT.md  FINERACT_MULTITENANCY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAP_AUDIT.md  IMPLEMENTATION_ROADMAP.md  INSTITUTIONAL_GRADE_PLAN.md  MULTITENANCY_SYSTEM.md  MULTI_CURRENCY_IMPLEMENTATION.md  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  PERMISSIONS_SYSTEM.md  PHASE1_COMPLETION_REPORT.md  PHASE1_DELIVERY_REPORT.md  PHASE1_MIGRATION_PLAN.md  PHASE2_COMPLETION_REPORT.md  PHASE2_DELIVERY_REPORT.md  PHASE3_DELIVERY_REPORT.md  PHASE4_DELIVERY_REPORT.md  PHASE5_DELIVERY_REPORT.md  PHASE6_DELIVERY_REPORT.md  PHASE7_COMPLETE_DELIVERY.md  (+122 more)
.circleci/: config.yml
.github/: ABOUT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
alembic/: env.py
data_cache/: NDQ.AX_2y.parquet  VAF.AX_2y.parquet  VAS.AX_1mo.parquet  VAS.AX_2y.parquet  VGS.AX_2y.parquet
deployment/: deploy_additional_modules.ps1  deploy_investor_management.ps1  deploy_lending_management.ps1  deploy_ultrawealth.ps1  docker-compose.additional.yml  docker-compose.investor.yml  docker-compose.lending.yml
docs/: DISTILLATION_COMPLETION_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FISCAL_AI_INTEGRATION.md  INTELLIGENT_SECURITY_ARCHITECTURE.md  OPERATIONS_PORTAL_PLAN.md  PHASE8_COMPLETION_SUMMARY.md  PHASE8_FINAL_PUSH_PLAN.md  PRODUCTION_SECURITY_ARCHITECTURE.md  RBAC_USAGE_EXAMPLES.md  README.md  SAVINGS_PHASE2_ARCHITECTURE.md  TOOL_CALLING_DISTILLATION_ARCHITECTURE.md  TOOL_CALLING_DISTILLATION_GUIDE.md
examples/: basic_loan_flow.py  (+5 more)
(+1215 files in other folders)
